Bug 10404: add previous/next browsing to staff client
Although previous/next browsing was added for searches in the OPAC
in 2011, the staff client has been without any sort of search browsing.
Until now. This patch is an all-singing, all-dancing, all-compatible
implementation of search browsing that will work across multiple
browser tabs and on any browser since IE7 (though the staff client
layout is broken on IE7).

To test:
1) Perform a search that will bring up multiple results.
2) View one of the results.
3) Use the Previous and Next links to browse along the search results.
4) Use the "Return to results" button to check that you end up at the
   correct page of results, even if you page through more than 20
   records.
5) Sign off.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -2582,3 +2582,44 @@ fieldset.rows table.mceListBox {
     -webkit-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, .5);
     box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, .5);
 }
+
+.browse-controls {
+    padding-top: 1em;
+    margin-left: 1.1em;
+    border-right: 1px solid #b9d8d9;
+    margin-right: .5em;
+    padding-bottom: 1em;
+}
+
+.browse-controls-inner {
+    padding: 0.3em;
+    background: #e8f0f6;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: 1px solid #b9d8d9;
+}
+
+#browse-return-to-results {
+    display: block;
+    text-align: center;
+}
+
+.browse-button {
+    border: 1px solid #b9d8d9;
+    color: #004d99;
+    padding: .4em .6em;
+    display: inline-block;
+}
+
+span.browse-button {
+    background: #fafafa;
+    color: #222;
+}
+
+.browse-button:hover {
+    background: #fafafa;
+}
+
+#browse-next {
+    float: right;
+}
